config/samples/security_v1_gateway.yaml
apiVersion: security.brcmlabs.com/v1
kind: Gateway
metadata:
  name: ssg
# spec Gateway Spec
spec:
  # version is the gateway version this operator has been validated against
  version: "11.2.1"
  # license is reference to a Gateway v11.x license. license.accept must be set to true for the gateway to start.
  license:
    accept: false
    secretName: gateway-license
  # app contains gateway application and deployment level specifications
  app:
    replicas: 1
    image: docker.io/caapim/gateway:11.2.1
    management:
      username: admin
      password: 7layer
      cluster:
        password: 7layer
        hostname: gateway.brcmlabs.com
    service:
      # annotations:
      type: LoadBalancer
      ports:
      - name: https
        port: 8443
        targetPort: 8443
        protocol: TCP
      - name: management
        port: 9443
        targetPort: 9443
        protocol: TCP
# status Gateway status
status: {}
